# terapipe

./: .clang-format  .gitignore  CMakeLists.txt  README.md  auto_latency_benchmark.sh  auto_mpirun_dp_slices_evaluation.sh  batch_measure_comm_latency.sh  batch_test.py  batch_tests.sh  build.sh  check_nccl_correctness.sh  check_ucx_correctness.sh  checkpoint.py  cluster-siyuan.yaml  cluster-ucx-16x.yaml  cluster.yaml  communication_latency_decomposition.py  dp_slices_evaluation.py  dynamic_programming.py  flop_model.py  fornode  get_worker_ips.py  gpt_local_pipeline.cpp  gpt_local_pipeline.h  gpt_test.cpp  latency_model.py  layer_latency.py  layer_latency.sh  load_cluster_env.sh  measure_comm_latency.sh  measure_p2p_comm_latency.sh  memory_model.py  model_latency_decomposition.py  model_latency_decomposition_megatron.py  mpi_megatron.sh  mpi_run_all.sh  mpirun_dp_slices_evaluation.sh  mpirun_measure_pipemegatron_latency.sh  mpirun_pipemegatron.sh  mpirun_terapipe.sh  (+34 more)
archive/: README.md  run_batch_tests.sh  run_nccl.sh  run_pipemegatron.sh  run_terapipe.sh
cluster/: README-aws-us-east-1.md  README.md  cluster-siyuan.yaml  cluster-template.yaml  initial-cluster-us-east-1.yaml  initial-cluster.yaml  jeff-nccl-2x.yaml  jeff-nccl-ryans.yaml  jeff-nccl-zh.yaml  siyuan-model-latency-16x.yaml  zhuohan-nccl-16x.yaml  zhuohan-nccl-2x.yaml  zhuohan-nccl-p4d24x.yaml  zhuohan-ucx-2x.yaml
mpu/: __init__.py  initialize.py  layers.py  mappings.py
nccl/: .gitignore  (+8 more)
src/: CMakeLists.txt  gpt_local_pipeline.cpp  gpt_local_pipeline.h  gpt_test.cpp  queue.h  transformer_models.cpp
(+8 files in other folders)
